// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [client] 1`] = `
"
import module from \\"resolve-subscribe-socket.io/lib/client\\"

const options = {}

export default { module, options }
"
`;

exports[`base config works correctly [server] 1`] = `
"
import module from \\"resolve-subscribe-socket.io/lib/server\\"

const options = {}

export default { module, options }
"
`;
